Make it to be a single project

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "renfrews-space-back-end",
+  "name": "express-boilerplate",
   "version": "0.1.0",
-  "description": "Renfrew's Space Back-end",
+  "description": "An express back-end start-up project",
   "main": "app.js",
   "author": {
     "name": "Liang Chen (Renfrew)",
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "nodemon -r dotenv/config app.js",
     "lint": "eslint --ext .js,.ts,.tsx . && prettier --check .",
-    "lint:fix": "prettier --write . && eslint --fix",
+    "lint:fix": "prettier --write . && eslint --ext .js,.ts,.tsx --fix .",
     "test": "echo 'Error: no test specified' && exit 1"
   },
   "dependencies": {
